--- a/index.html
+++ b/index.html
@@ -11,17 +11,8 @@
   </head>
   <body>
     
-    <h1>Video JS</h1>
-    <video id="my-video" class="video-js" controls preload="auto" width="640" height="264" data-setup='{"controls": true, "autoplay": false, "preload": "auto"}'>
-      <source src="videos/SampleVideo_1280x720_5mb.mp4" type='video/mp4'>
-      <!-- <source src="MY_VIDEO.webm" type='video/webm'> -->
-      <p class="
-      <p class="vjs-no-js">
-        To view this video please enable JavaScript, and consider upgrading to a web browser that
-        <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-      </p>
-    </video>
-    <hr>
+
+
     <h1>WYSIWYG</h1>
     <button id="saveDelta" style="margin-bottom:10px;">Save Delta</button>
 
@@ -75,9 +66,22 @@
       </div>
 
       <h1>WYSIWIG Output</h1>
-      <div id="output">
+      <div id="output" class="ql-container">
 
       </div>
+
+      <hr>
+
+      <h1>Video JS</h1>
+      <video id="my-video" class="video-js" controls preload="auto" width="640" height="264" data-setup='{"controls": true, "autoplay": false, "preload": "auto"}'>
+        <source src="videos/SampleVideo_1280x720_5mb.mp4" type='video/mp4'>
+        <!-- <source src="MY_VIDEO.webm" type='video/webm'> -->
+        <p class="
+        <p class="vjs-no-js">
+          To view this video please enable JavaScript, and consider upgrading to a web browser that
+          <a href="https://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+        </p>
+      </video>
 
 
     <script
